test-suite/8-syntax_err.snapshot
Compilation: Failed
Output:
pub fn main() { 3 } + #
                    ^
5:21: Syntax Error
